--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~10.1.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.10",
     "nodemon": "^2.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
